--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ footer .colonnes{
 ul .contenuprincipal{
 	text-align: center;
 	align-content: center ;
-	font-size: 25px11;
+	font-size: 25px;
 }
 ul .Annonces{
 	text-align: center;
