--- a/style.css
+++ b/style.css
@@ -174,3 +174,19 @@ ul .invite a{
 	color: #fff;
 }
 
+@media screen and (max-width: 640px){
+	body .page{
+		margin: 10px;
+	}
+	nav .onglets{
+		display: none;
+	}
+	header{
+		margin-top: 20px;
+		background-size: 250px 250px;
+	}
+	header .h1{
+		font-size: 30px;
+		padding: 100px;
+	}
+}
